tests/fail/ch_nightly/missing_type.rs
fn main() {
    sscanf::scanf!("hi", "asdf{}{}asdf{:bob}", usize);
}
